# TJ_parce

./: .gitattributes  .gitignore  CLAUDE.md  README.md  ROADMAP.md
agents/go/: README.md  go.mod  go.sum  tj-agent.example.yaml
agents/go/cmd/tj-agent-go/: config_test.go  main.go  main_test.go  service_other.go  service_windows.go
agents/go/internal/agentcfg/: agentcfg.go  agentcfg_test.go
agents/go/internal/chsink/: chnum.go  chsink_test.go  cols.go  ctxline.go  ctxline_test.go  ndjson.go  ndjson_test.go  rich.go  rich_test.go  row.go  sink.go
agents/go/internal/follow/: assemble.go  assemble_test.go  checkpoint.go  checkpoint_test.go  discovery.go  follow.go  ident_other.go  ident_windows.go  registry.go  walglue.go  worker.go
agents/go/internal/metrics/: http.go  metrics.go  metrics_test.go
agents/go/internal/parser/: fields.go  fields_test.go  parser.go  parser_test.go  relpath.go  stream.go  stream_test.go
agents/go/internal/sqlnorm/: live_verify_test.go  sqlnorm.go  sqlnorm_test.go
agents/go/internal/wal/: wal.go  wal_test.go
agents/rust/: Cargo.toml  README.md
agents/rust/src/: chsink.rs  follow.rs  main.rs  parser.rs  scanner.rs  walker.rs
bench/clickhouse/: bench_schema.sql
bench/results/2026-07-04-official/: README.md  full_corpus.json  medium_null_runs.json  medium_null_summary.json  stress_bigfile.json
bench/results/2026-07-04-preliminary/: smoke.md
bench/results/2026-07-06-e2e/: README.md  medium_e2e_runs.json  medium_e2e_summary.json
bench/results/2026-07-06-post-memfix/: README.md  full_corpus.json  medium_null_runs.json  medium_null_summary.json  stress_bigfile.json
bench/results/2026-07-08-tail/: README.md
bench/scripts/: make_corpus.ps1  measure.ps1  prepare_host.ps1  run_series.ps1  run_series_e2e.ps1  warmup.ps1
core/: .gitignore  CMakeLists.txt  README.md
core/cli/: clickhouse_sink.cpp  clickhouse_sink.hpp  follow.cpp  follow.hpp  main.cpp
core/ffi/: selftest.c  tj_ffi.cpp  tj_ffi.h
core/include/tj/: normalizer.hpp
core/src/: parser.cpp  parser.hpp  pipeline.cpp  util.cpp  util.hpp
cpp/: BUILD.md  CMakeLists.txt  INSTALL_MINGW.md  README.md  build.bat  build_direct.bat  build_mingw.bat  build_msvc.bat  build_ps.ps1  build_simple.bat  compile_now.bat  count_contexts.cpp  run_cpp.bat  run_cpp.ps1
cpp_parse/: .gitignore  COMPILE.bat  README.md  compile_direct_exact.bat  compile_now.bat  count_contexts.cpp
deploy/: docker-compose.yml
deploy/agent/: README.md
deploy/clickhouse/init/: 001_schema.sql  002_sql_norm.sql
deploy/grafana/dashboards/: tj-calls.json  tj-db.json  tj-errors.json  tj-locks.json  tj-overview.json
deploy/grafana/provisioning/dashboards/: provider.yml
deploy/grafana/provisioning/datasources/: clickhouse.yml
deploy/importer/: README.md  import-jsonl.ps1
deploy/prometheus/: prometheus.yml
docs/: README.md  adr-vector.md  bakeoff-protocol.md  context-line.md  decision-record.md  event-inventory.md  format-spec.md  normalizer-source-map.md  sql-normalization.md  storage-design.md  user-guide.md
tests/golden/: make_cases.ps1  run_golden.ps1
tests/golden/cases/bad_filename/: expected.jsonl
tests/golden/cases/bom_input/: expected.jsonl
tests/golden/cases/dup_keys/: expected.jsonl
tests/golden/cases/empty_value/: expected.jsonl
tests/golden/cases/leading_zero_duration/: expected.jsonl
tests/golden/cases/mask_inside_quotes/: XFAIL
tests/golden/cases/min_size_boundary/: expected.jsonl
tests/golden/cases/quotes_doubling/: expected.jsonl
tests/golden/cases/real_callsdiag_86/: expected.jsonl
tests/golden/cases/real_diag_86/: expected.jsonl
tests/golden/cases/real_exp_86/: expected.jsonl
tests/golden/cases/real_lic_86/: expected.jsonl
tests/golden/cases/real_longdb_01/: expected.jsonl
tests/golden/cases/real_qerr_diag/: expected.jsonl
tests/golden/cases/real_tlockdiag/: expected.jsonl
tests/golden/cases/short_header/: expected.jsonl
tests/golden/cases/single_quote_heuristic/: expected.jsonl
tests/golden/cases/version_token/: expected.jsonl
tests/tail/: README.md  generator.ps1  run_tail.ps1
